force-app/main/default/objects/Account/fields/Account_Class_vod__c.field-meta.xml
<CustomField>
    <fullName>Account_Class_vod__c</fullName>
    <description>The indicator of hospital/pharmacy which each pharmaceutical company use for analyzing purposes.</description>
    <label>Account Class</label>
    <length>20</length>
    <type>Text</type>
</CustomField>