force-app/main/default/objects/Account/fields/Account_Group_vod__c.field-meta.xml
<CustomField>
    <fullName>Account_Group_vod__c</fullName>
    <description>When populated, marks this account as a member of the designated group of accounts. The Account Group name must be an exact literal match across all accounts that are members of this group.</description>
    <label>Account Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>