force-app/main/default/objects/Account/fields/Account_Identifier_vod__c.field-meta.xml
<CustomField>
    <fullName>Account_Identifier_vod__c</fullName>
    <description>Additional Account Identifier</description>
    <label>Account Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>