force-app/main/default/objects/Account/fields/Account_Search_Business_vod__c.field-meta.xml
<CustomField>
    <fullName>Account_Search_Business_vod__c</fullName>
    <description>Text value of Primary Parent Lookup with spaces removed</description>
    <formula>SUBSTITUTE( Primary_Parent_vod__r.Name,&quot; &quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Search Business</label>
    <type>Text</type>
</CustomField>