force-app/main/default/objects/Account/fields/Account_Search_FirstLast_vod__c.field-meta.xml
<CustomField>
    <fullName>Account_Search_FirstLast_vod__c</fullName>
    <description>If Person account, set the field value as firstname&amp;lastname no space</description>
    <formula>IF( IsPersonAccount , SUBSTITUTE(FirstName,&quot; &quot;,&quot;&quot;) &amp; SUBSTITUTE(LastName,&quot; &quot;,&quot;&quot;) ,Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Search FirstLast</label>
    <type>Text</type>
</CustomField>