force-app/main/default/objects/Account/fields/Account_Search_LastFirst_vod__c.field-meta.xml
<CustomField>
    <fullName>Account_Search_LastFirst_vod__c</fullName>
    <description>If Person account, set the field value as lastname&amp;firstname no space</description>
    <formula>IF( IsPersonAccount ,SUBSTITUTE( LastName,&quot; &quot;,&quot;&quot;) &amp; SUBSTITUTE(FirstName,&quot; &quot;,&quot;&quot;),Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Search LastFirst</label>
    <type>Text</type>
</CustomField>