force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Account type (e.g. Plan Provider, Network or Specialty Org). Used by MCO and MCO Plan accounts.</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PBM</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Admin Org</fullName>
            </value>
            <value>
                <fullName>Specialty Org</fullName>
            </value>
            <value>
                <fullName>Plan Provider</fullName>
            </value>
            <value>
                <fullName>MCO</fullName>
            </value>
            <value>
                <fullName>Stand-Alone Medicare</fullName>
            </value>
            <value>
                <fullName>Stand Alone HIX</fullName>
            </value>
            <value>
                <fullName>State Medicaid</fullName>
            </value>
            <value>
                <fullName>Specialty Provider</fullName>
            </value>
            <value>
                <fullName>Tricare</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>IDN</fullName>
            </value>
            <value>
                <fullName>ACO</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Person Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>