force-app/main/default/objects/Account/fields/AHA__c.field-meta.xml
<CustomField>
    <fullName>AHA__c</fullName>
    <description>American Hospital Association identifier.  Used for hospital accounts.</description>
    <label>AHA #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>