force-app/main/default/objects/Account/fields/Alternate_Name_vod__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Name_vod__c</fullName>
    <description>Alternate name of one account used in iRep to show an alpha-bar.</description>
    <label>Alternate Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>