force-app/main/default/objects/Account/fields/Approved_Email_Opt_Type_vod__c.field-meta.xml
<CustomField>
    <fullName>Approved_Email_Opt_Type_vod__c</fullName>
    <description>Approved_Email_Opt_Type_vod hold the consent type for the Account. Used in Approved Email to drive the opt-in consent model.</description>
    <label>Approved Email Consent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Explicit_Opt_In_vod</fullName>
            </value>
            <value>
                <fullName>Implicit_Opt_In_vod</fullName>
            </value>
            <value>
                <fullName>Never_vod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>