force-app/main/default/objects/Account/fields/ATL_Last_Update_Date_Time_vod__c.field-meta.xml
<CustomField>
    <fullName>ATL_Last_Update_Date_Time_vod__c</fullName>
    <description>Last time this Account was updated using the Account Territory Loader. To enable use of this field, set the ATL_LAST_UPDATE_TRACKING field on Veeva Settings to TRUE.</description>
    <inlineHelpText>Do not modify. Set automatically by Account Territory Loader process.</inlineHelpText>
    <label>ATL Last Update</label>
    <type>DateTime</type>
</CustomField>