force-app/main/default/objects/Account/fields/Beds__c.field-meta.xml
<CustomField>
    <fullName>Beds__c</fullName>
    <description>Number of beds at this facility.</description>
    <label># Beds</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>