force-app/main/default/objects/Account/fields/BOT_ACO_IDN__c.field-meta.xml
<CustomField>
    <fullName>BOT_ACO_IDN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is created by BusinessOne Technologies. It is a self-lookup and used to store parent IDN Id while creation of IDN Record.</description>
    <label>ACO-IDN</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accountable Care Organizations</relationshipLabel>
    <relationshipName>ACO_IDN</relationshipName>
    <type>Lookup</type>
</CustomField>