force-app/main/default/objects/Account/fields/BOT_ACO_Lives_Commercial__c.field-meta.xml
<CustomField>
    <fullName>BOT_ACO_Lives_Commercial__c</fullName>
    <description>It is created by BusinessOne Technologies. It is used to store ACO Lives (Commercial)</description>
    <label>Commercial Lives</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>