force-app/main/default/objects/Account/fields/BOT_ACO_Lives_Medicare__c.field-meta.xml
<CustomField>
    <fullName>BOT_ACO_Lives_Medicare__c</fullName>
    <description>It is created by BusinessOne Technologies. It is used to store ACO Lives (Medicare)</description>
    <label>Medicare Lives</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>