force-app/main/default/objects/Account/fields/BOT_ACO_MCO__c.field-meta.xml
<CustomField>
    <fullName>BOT_ACO_MCO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is created by BusinessOne Technologies. It is a self-lookup and used to store parent ACO Id on MCO record</description>
    <label>ACO-MCO</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Managed Care Organizations</relationshipLabel>
    <relationshipName>ACO_MCO</relationshipName>
    <type>Lookup</type>
</CustomField>