force-app/main/default/objects/Account/fields/BOT_ACO_Type__c.field-meta.xml
<CustomField>
    <fullName>BOT_ACO_Type__c</fullName>
    <description>It is created by BusinessOne Technologies. It is used to store ACO Type</description>
    <label>ACO Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>