force-app/main/default/objects/Account/fields/BOT_Annual_Net_Operating_Revenue__c.field-meta.xml
<CustomField>
    <fullName>BOT_Annual_Net_Operating_Revenue__c</fullName>
    <description>It is created by BusinessOne Technologies. It is used to store the Annual Net Operating Revenue of IDN</description>
    <label>Annual Net Operating Revenue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>