force-app/main/default/objects/Account/fields/BOT_Births__c.field-meta.xml
<CustomField>
    <fullName>BOT_Births__c</fullName>
    <description>It is created by BusinessOne Technologies. It is used to store no of Births</description>
    <label>Births</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>