force-app/main/default/objects/Account/fields/BOT_Emergency_Care_Visits__c.field-meta.xml
<CustomField>
    <fullName>BOT_Emergency_Care_Visits__c</fullName>
    <description>It is created by BusinessOne Technologies. It is used to store Emergency Care Visits</description>
    <label>Emergency Care Visits</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>