force-app/main/default/objects/Account/fields/BOT_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>BOT_Entity_Id__c</fullName>
    <description>To store BOT Entity Id. It is used for internal reference, it is unique also using as external Id. It is a hidden field and will not appear in page layout.</description>
    <externalId>true</externalId>
    <label>Entity Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>