force-app/main/default/objects/Account/fields/BOT_Entity_Level__c.field-meta.xml
<CustomField>
    <fullName>BOT_Entity_Level__c</fullName>
    <description>To store the entity level like National / Regional / Local</description>
    <label>Entity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>State Medicaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>