force-app/main/default/objects/Account/fields/BOT_Group_Purchasing_Organization__c.field-meta.xml
<CustomField>
    <fullName>BOT_Group_Purchasing_Organization__c</fullName>
    <description>It is created by BusinessOne Technologies. It is used to store Group Purchasing Organization(GPO)</description>
    <label>Group Purchasing Organization(GPO)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>