force-app/main/default/objects/Account/fields/BOT_Hospital_IDN__c.field-meta.xml
<CustomField>
    <fullName>BOT_Hospital_IDN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is created by BusinessOne Technologies. It is a self-lookup and used to store Parent IDN Id while creating a Hospital record</description>
    <label>Hospital-IDN</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hospitals</relationshipLabel>
    <relationshipName>Hospital_IDN</relationshipName>
    <type>Lookup</type>
</CustomField>