force-app/main/default/objects/Account/fields/BOT_Inpatient_Hospital_Admission__c.field-meta.xml
<CustomField>
    <fullName>BOT_Inpatient_Hospital_Admission__c</fullName>
    <description>It is created by BusinessOne Technologies. It is used to store the Inpatient Hospital Admission</description>
    <label>Inpatient Hospital Admission</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>