force-app/main/default/objects/Account/fields/BOT_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>BOT_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is Created by BusinessOne Technologies. It represents the current status of the plan.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>