force-app/main/default/objects/Account/fields/BOT_Is_Parent__c.field-meta.xml
<CustomField>
    <fullName>BOT_Is_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify the Account plan as Parent</description>
    <label>Is Parent</label>
    <type>Checkbox</type>
</CustomField>