force-app/main/default/objects/Account/fields/BOT_Licensed_Staffed_Beds__c.field-meta.xml
<CustomField>
    <fullName>BOT_Licensed_Staffed_Beds__c</fullName>
    <description>It is created by BusinessOne Technologies. It is used to store Licensed/Staffed Beds</description>
    <label>Licensed/Staffed Beds</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>