force-app/main/default/objects/Account/fields/BOT_Outpatient_Care_Centers__c.field-meta.xml
<CustomField>
    <fullName>BOT_Outpatient_Care_Centers__c</fullName>
    <description>It is created by BusinessOne Technologies. It is used to store no of Outpatient Care Centers associated with IDN</description>
    <label>Outpatient Care Centers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>