force-app/main/default/objects/Account/fields/BOT_Outpatient_Hospital_Admission__c.field-meta.xml
<CustomField>
    <fullName>BOT_Outpatient_Hospital_Admission__c</fullName>
    <description>It is created by BusinessOne Technologies. It is used to store outpatient Hospital Admission</description>
    <label>Outpatient Hospital Admission</label>
    <length>50</length>
    <type>Text</type>
</CustomField>