force-app/main/default/objects/Account/fields/BOT_Parent_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Parent_Entity_ID__c</fullName>
    <description>To store the BOT parent entity ID. It is a hidden filed and used for BOT internal data reference.</description>
    <label>Parent Entity  ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>