force-app/main/default/objects/Account/fields/BOT_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Person_ID__c</fullName>
    <description>This field is created by BOT. It is used to store the unique ID of Key Contacts. It is an External ID and used for BOT internal reference.</description>
    <externalId>true</externalId>
    <label>Person ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>