force-app/main/default/objects/Account/fields/BOT_Plan_Lives_Rx__c.field-meta.xml
<CustomField>
    <fullName>BOT_Plan_Lives_Rx__c</fullName>
    <description>This field is created by BusinessOne Technologies. It is used to store the total lives covered under this plan. These lives are calculated from Benefit design lives through a trigger.</description>
    <label>Plan Lives Rx</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>