force-app/main/default/objects/Account/fields/BOT_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>BOT_Refresh_Date__c</fullName>
    <description>This field is created by BusinessOne Technologies Inc. It is used to hold the latest refresh date of the Account.</description>
    <label>Refresh Date</label>
    <type>Date</type>
</CustomField>