force-app/main/default/objects/Account/fields/BOT_Suffix1__c.field-meta.xml
<CustomField>
    <fullName>BOT_Suffix1__c</fullName>
    <label>Suffix1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>