force-app/main/default/objects/Account/fields/BOT_Total_No_of_Hospitals__c.field-meta.xml
<CustomField>
    <fullName>BOT_Total_No_of_Hospitals__c</fullName>
    <description>It is created by BusinessOne Technologies. It is used to store total no of Hospitals comes under IDN</description>
    <label>Total # of Hospitals</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>