force-app/main/default/objects/Account/fields/Business_Professional_Person_vod__c.field-meta.xml
<CustomField>
    <fullName>Business_Professional_Person_vod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the stand-alone Person Account record that the Business_Professional_vod is associated to.  Lookup should only allow a Person Account to be selected.
�</description>
    <label>Business Professional Person</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Business Professional Person)</relationshipLabel>
    <relationshipName>Business_Professional_Person_vod</relationshipName>
    <type>Lookup</type>
</CustomField>