force-app/main/default/objects/Account/fields/Call_Reminder_vod__c.field-meta.xml
<CustomField>
    <fullName>Call_Reminder_vod__c</fullName>
    <description>The contents of this field are displayed on every call against this account in the zvod_Account_Call_Reminder_vod_c_vod location.</description>
    <label>Call Reminder</label>
    <type>TextArea</type>
</CustomField>