force-app/main/default/objects/Account/fields/Career_Status_vod__c.field-meta.xml
<CustomField>
    <fullName>Career_Status_vod__c</fullName>
    <description>Picklist of current career status</description>
    <label>Career Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Peak_vod</fullName>
            </value>
            <value>
                <fullName>Emerging_vod</fullName>
            </value>
            <value>
                <fullName>Retired_vod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>