force-app/main/default/objects/Account/fields/CLM_Opt_Type_vod__c.field-meta.xml
<CustomField>
    <fullName>CLM_Opt_Type_vod__c</fullName>
    <description>Holds the CLM consent type for the Account. Used in CLM to drive the opt-in consent model.</description>
    <label>CLM Opt Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Explicit_Opt_In_vod</fullName>
            </value>
            <value>
                <fullName>Implicit_Opt_In_vod</fullName>
            </value>
            <value>
                <fullName>Never_vod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>