force-app/main/default/objects/Account/fields/Color_vod__c.field-meta.xml
<CustomField>
    <fullName>Color_vod__c</fullName>
    <formula>IF(NOT( IsPersonAccount ),&#39;Green&#39;,IF( ISPICKVAL(Gender_vod__c,&#39;F&#39;),&#39;Red&#39;,IF(ISPICKVAL(Gender_vod__c,&#39;M&#39;),&#39;Blue&#39;,&#39;Clear&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color</label>
    <type>Text</type>
</CustomField>