force-app/main/default/objects/Account/fields/Commercial_Patient_Days_1000__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Patient_Days_1000__c</fullName>
    <description>Commercial Patient Days.  Used for MCO and MCO Plan accounts</description>
    <label>Commercial Patient Days/1000</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>