force-app/main/default/objects/Account/fields/Commercial_Premiums_PMPM__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Premiums_PMPM__c</fullName>
    <description>Per patient per month commercial premiums.  Used by MCO and MCO Plan accounts.</description>
    <label>Commercial Premiums (PMPM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>