force-app/main/default/objects/Account/fields/Contracts_Process__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Process__c</fullName>
    <description>Contract Process at this account.  Used for MCO and MCO Plan accounts.</description>
    <label>Contracts Process</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>