force-app/main/default/objects/Account/fields/Country_vod__c.field-meta.xml
<CustomField>
    <fullName>Country_vod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Country where the Account is located.</description>
    <label>Country</label>
    <referenceTo>Country_vod__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>