force-app/main/default/objects/Account/fields/Credentials_vod__c.field-meta.xml
<CustomField>
    <fullName>Credentials_vod__c</fullName>
    <description>Picklist of the professional&#39;s (Person Account) credentials. Edit the picklist to change the available credentials.  Used by HMS data load.</description>
    <label>Credentials</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>RNP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>