force-app/main/default/objects/Account/fields/Customer_Master_Status_vod__c.field-meta.xml
<CustomField>
    <fullName>Customer_Master_Status_vod__c</fullName>
    <description>Corresponds to the validation status of a record in the customer master. This field should not be modified.</description>
    <label>Customer Master Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Staging_vod</fullName>
            </value>
            <value>
                <fullName>Inactive_vod</fullName>
            </value>
            <value>
                <fullName>Valid_vod</fullName>
                <default>true</default>
                <label>Valid_vod</label>
            </value>
            <value>
                <fullName>Under_Review_vod</fullName>
            </value>
            <value>
                <fullName>Rejected_vod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>