force-app/main/default/objects/Account/fields/Default_Inventory_Monitoring_Type_vod__c.field-meta.xml
<CustomField>
    <fullName>Default_Inventory_Monitoring_Type_vod__c</fullName>
    <description>Defines which Inventory Monitoring Type should open by default when creating a new IM.</description>
    <label>Default Inventory Monitoring Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None_vod</fullName>
            </value>
            <value>
                <fullName>Inventory_Monitoring_vod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>