force-app/main/default/objects/Account/fields/Default_Order_Type_vod__c.field-meta.xml
<CustomField>
    <fullName>Default_Order_Type_vod__c</fullName>
    <description>The order type that is created by default for this account, when creating a new order.</description>
    <label>Default Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct_vod</fullName>
            </value>
            <value>
                <fullName>Transfer_vod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>