force-app/main/default/objects/Account/fields/Departments__c.field-meta.xml
<CustomField>
    <fullName>Departments__c</fullName>
    <description>Number of departments at this facility.</description>
    <label># Departments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>