force-app/main/default/objects/Account/fields/Do_Not_Call_vod__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_vod__c</fullName>
    <description>If set to Yes_vod then calls cannot be recorded against this account.</description>
    <label>Do Not Call?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No_vod</fullName>
                <default>true</default>
                <label>No_vod</label>
            </value>
            <value>
                <fullName>Yes_vod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>