force-app/main/default/objects/Account/fields/Do_Not_Create_Child_Account_vod__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Create_Child_Account_vod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The DISABLE_HIERARCHY_AUTOCREATE custom setting uses this field to indicate that an account should not be added to the Account Hierarchy when creating a new record using the New Record Type Wizard or Parent Account Wizard.  This is a system field and therefore should not be displayed in a page layout.</description>
    <label>Do Not Create Child Account</label>
    <type>Checkbox</type>
</CustomField>