force-app/main/default/objects/Account/fields/Do_Not_Sync_Sales_Data_vod__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sync_Sales_Data_vod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Do Not Sync Sales Data field is used to determine if the Analytics Sales Data should be synced to the VMobile Tablet Edition.  If this field is checked, then the Sales Data will not be synced.</description>
    <label>Do Not Sync Sales Data</label>
    <type>Checkbox</type>
</CustomField>