force-app/main/default/objects/Account/fields/Enable_Restricted_Products_vod__c.field-meta.xml
<CustomField>
    <fullName>Enable_Restricted_Products_vod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true then trigger online will populate the Restricted Products on Insert.  Used to allow data loading to bypass the setting of the Restricted Products</description>
    <label>Enable Restricted Products</label>
    <type>Checkbox</type>
</CustomField>