force-app/main/default/objects/Account/fields/Exclude_from_Zip_to_Terr_Processing_vod__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Zip_to_Terr_Processing_vod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Territories_vod field will not be overwritten by Zip to Terr processing if this is checked</description>
    <label>Exclude from Zip to Terr Processing</label>
    <type>Checkbox</type>
</CustomField>