force-app/main/default/objects/Account/fields/External_ID_vod__c.field-meta.xml
<CustomField>
    <fullName>External_ID_vod__c</fullName>
    <description>External ID is used for data loading only.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>