force-app/main/default/objects/Account/fields/Formatted_Name_vod__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Name_vod__c</fullName>
    <description>This formula field is used to display a well formatted person account name in (lastname, firstname suffix) format.</description>
    <formula>IF( IsPersonAccount , 
IF( AND(RecordType.DeveloperName == &#39;Business_Professional_vod&#39;, NOT(ISBLANK(Primary_Parent_vod__r.Name))), LastName &amp; &quot;, &quot; &amp; FirstName &amp; &quot; (&quot; &amp;  Primary_Parent_vod__r.Name &amp; &quot;)&quot; ,
LastName &amp; &quot;, &quot; &amp; FirstName &amp; IF(ISNULL(Suffix_vod__c), &quot;&quot;, &quot; &quot;&amp;Suffix_vod__c)),
Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Name</label>
    <type>Text</type>
</CustomField>