force-app/main/default/objects/Account/fields/Furigana_vod__c.field-meta.xml
<CustomField>
    <fullName>Furigana_vod__c</fullName>
    <description>Field for Japanese users input Katakana or Hiragana in order to search for accounts based on Furigana</description>
    <label>Furigana</label>
    <length>100</length>
    <type>Text</type>
</CustomField>