force-app/main/default/objects/Account/fields/Gender_vod__c.field-meta.xml
<CustomField>
    <fullName>Gender_vod__c</fullName>
    <description>Gender of the professional (Person Account).</description>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>